company section overflow, select-class, svg fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,7 +353,6 @@ header a {
 }
 
 /* -------- COMPANIES SECTION -------- */
-/* TODO fix florids svg e border design */
 
 #companies {
     margin-top: 100px;
@@ -365,14 +364,29 @@ header a {
 
 .companies {
     flex-wrap: wrap;
+    height: calc(100vw / 3);
+}
+
+.company-selected {
+    border: 15px solid rgba(255, 255, 255, 0.299);
 }
 
 .company-focus {
     background-color: #F5F5F5;
-    padding: 20px;
+    padding: 30px;
+    height: calc(100vw / 3);
+    overflow: scroll
 }
 
-.company-focus svg {
+.company-focus hr {
+    margin-block: 20px;
+}
+
+.company-logo-focus {
+    width: 50%;
+}
+
+.company-logo-focus svg {
     width: 100%;
 }
 
@@ -400,6 +414,10 @@ header a {
 .companies-left .company:nth-child(3) {
     background-color: #0093CE;
 }
+
+/* .companies-left .company:nth-child(3) svg {
+    max-width: 195px;
+} */
 
 .companies-left .company:nth-child(4) {
     background-color: #FF1C1C;
